--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 # python 3.10
 
-langchain
-langchain-ollama
-sentence-transformers
-qdrant-client
-fastembed
-numpy
-jinja2
-underthesea
-docling
-tiktoken
-FlagEmbedding
-langchain_openai
-langgraph
+langchain==0.3.27
+langchain-ollama==0.3.6
+sentence-transformers==5.1.0
+qdrant-client==1.15.1
+fastembed==0.7.1
+numpy==2.2.6
+jinja2==3.1.6
+underthesea==6.8.4
+docling==2.43.0
+tiktoken==0.11.0
+FlagEmbedding==1.3.5
+langchain_openai==0.3.29
+langgraph==0.6.4
+langchain_tavily==0.2.11
